--- a/Domain/Time_Line.Domain.Application/Time_Line.Domain.Application.csproj
+++ b/Domain/Time_Line.Domain.Application/Time_Line.Domain.Application.csproj
@@ -10,4 +10,14 @@
     <ProjectReference Include="..\Time_Line.Domain.Entities\Time_Line.Domain.Entities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.3" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.0.3" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.1.0" />
+  </ItemGroup>
+
 </Project>
