Posts Features , Services Added and fixed Loggin Command

--- a/API/Time_Line.API/Time_Line.API.csproj
+++ b/API/Time_Line.API/Time_Line.API.csproj
@@ -18,6 +18,7 @@
     <ProjectReference Include="..\..\Domain\Time_Line.Domain.Application\Time_Line.Domain.Application.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Time_Line.Infrastructure.Identity\Time_Line.Infrastructure.Identity.csproj" />
     <ProjectReference Include="..\..\Infrastructure\Time_Line.Infrastructure\Time_Line.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\Infrastructure\Time_Line.Persistence\Time_Line.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
